# hellomyothello

./: .gitignore  .travis.yml  Cargo.toml  Makefile  hello.html
docs/: hello.js  hello.wasm  index.html
src/: app.rs  board.rs  main.rs  player.rs  square.rs  stone.rs
static/: index.html
