[package]
name = "hellomyothello"
version = "0.0.1"
authors = ["yskszk63 <yskszk63@gmail.com>"]

[dependencies]
rand = "0.3"
piston = "0.31"
piston2d-graphics = "0.21"
piston2d-opengl_graphics = "0.42"
pistoncore-sdl2_window = "0.41"
board-game-geom = "0.2"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.0"